--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   flutter_svg_provider: ^1.0.3
   kartal: ^2.5.1
   flutter_signin_button: ^2.0.0
@@ -43,8 +43,8 @@ dependencies:
   fl_chart: ^0.55.2
   responsive_framework: ^0.2.0
   firebase_core: ^2.1.1
-  firebase_auth: ^4.1.0
-  cloud_firestore: ^4.1.0
+  firebase_auth: ^4.4.0
+  cloud_firestore: ^4.5.0
   get: ^4.6.5
   flutter_native_splash: ^2.2.15
   line_awesome_flutter: ^2.0.0
@@ -63,6 +63,7 @@ dependencies:
   syncfusion_flutter_core: ^21.1.38
   syncfusion_flutter_gauges: ^21.1.38
   syncfusion_flutter_sliders: ^21.1.38
+  package_info_plus: ^3.0.3
  
 dev_dependencies:
   flutter_test:
